# chain-risk-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
data-ingestion/: Dockerfile  README.md  go.mod  go.sum
docs/: API_SPECS_GUIDE.md  CHANGELOG_SCRIPTS.md  DEVELOPMENT_PLAN.md  DOCS_AUDIT_REPORT.md  GATEWAY_BFF_ARCHITECTURE.md  NACOS_INTEGRATION.md  PHASE1_TEST_PLAN.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  SCRIPTS_COMPARISON.md  SCRIPTS_QUICK_REFERENCE.md  SESSION_ARCHIVE_20241230.md  TECH_DECISIONS.md
frontend/: .prettierrc  API_IMPLEMENTATION.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
infra/: DEPLOY_FILES.txt
processing/: pom.xml
scripts/: README.md  check-infra.sh  common.sh  env-remote.sh  load-env.sh  run-archive-job.sh  run-batch-processor.sh  run-flink.sh  run-graph-engine.sh  run-integration-test.sh  run_integration_test.sh  setup-hosts.sh  sparse-clone.sh  stop-graph-engine.sh  test-e2e.sh  test-integration-phase1.sh  test-integration-phase2.sh  test-integration-phase3.sh  trino-query.sh  update-api-specs.sh
services/risk-ml-service/: README.md  pyproject.toml
services/risk-ml-service/app/: main.py
services/risk-ml-service/app/api/v1/: risk.py
services/risk-ml-service/app/core/: config.py  logging.py  nacos.py
services/risk-ml-service/app/models/: risk.py
services/risk-ml-service/app/rules/: base.py  engine.py
services/risk-ml-service/app/services/: query_client.py  risk_service.py
services/risk-ml-service/configs/: config.yaml
(+308 files in other folders)
